Add java object memory usage complex case